<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/button_message" />

    <CheckBox
        android:id="@+id/mycheckbox_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mycheckbox_yes" />

    <Switch
        android:id="@+id/myswitch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch1" />

    <RadioButton
        android:id="@+id/radiobutton1"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:text="@string/radiobutton1" />

    <EditText
        android:id="@+id/myedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext"
        android:text="@string/editmessage" />

    <ImageButton
        android:src="@drawable/logo_algonquin"
        android:id="@+id/myimagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/myimg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logo_algonquin" />


</LinearLayout>